--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -5,11 +5,11 @@
   width: 100%;
   z-index: 1000;
   background-color: #F5F0E6;
-  padding: 0.75rem 1.5rem;
   display: flex;
   justify-content: flex-start;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  height: 90px;
+  height: 114px;
+  box-sizing: border-box;
 }
 
 .logo-and-nav {
@@ -28,6 +28,7 @@
   object-fit: contain;
   display: block;
   cursor: pointer;
+  margin-left: 1.5rem;
 }
 
 .hamburger {
@@ -71,7 +72,6 @@
   color: #7A8450;
 }
 
-
 .nav.open ul {
   display: flex;
   flex-direction: column;
@@ -81,8 +81,8 @@
 
 .header .nav.open {
   display: block;
-  position: absolute;   /* ráúszik */
-  top: 90px;            /* a header alá kerül */
+  position: absolute;
+  top: 90px;
   left: 0;
   width: 100%;
   background-color: #F5F0E6;
