--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 html {
   scroll-behavior: smooth;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
